# vvedenie_v_cpp

./: README.md
task2/project/: CMakeLists.txt
task2/project/A/: preparing.py
task2/project/B/: CMakeLists.txt
